# rust-sudoku-solver

./: .gitignore  Cargo.toml  README.md
puzzles/: challenge.csv  challenge2.csv  hard.csv
src/: generator.rs  grid.rs  lib.rs  main.rs  pdf.rs  solver.rs
