[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Joel Therrien <joel@joeltherrien.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
argparse = "0.2.2"
rand = "0.7"
rand_chacha = "0.2.2"
printpdf = "0.3.2"